# agentfoundry

./: .env.example  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  Artifact Master Index (v0.1).md  CHANGELOG.md  CLEANUP_PLAN.md  Current State.md  DEPLOYMENT.md  DOCKER_DEV_WORKFLOW.md  DOCKER_FIXES.md  Dockerfile.frontend  Environment C.md  INFRASTRUCTURE_STATUS.md  LESSONS_LEARNED.md  LIVEKIT_CHECKPOINT.md  LIVEKIT_DOCKER_MIGRATION.md  LIVEKIT_SETUP.md  POC_SCOPE.md  PROJECT_INVENTORY.md  PROJECT_PLAN.md  README.md  ROADMAP.md  START_HERE.md  TEST_README.md  UAT_GUIDE.md  check_room_service_module.py  commit_helper.sh  diagnose_livekit.py  diagnose_livekit_v2.py  diagnose_room_service.py  diagnose_ui.sh  docker-compose.dev.yml  docker-compose.yml  eslint.config.js  generate_livekit_keys.sh  livekit-config.yaml  mcp_server.py  mcp_server.py8000  (+23 more)
.github/: FUNDING.yml
agent/: admin_assistant_agent.py  data_agent.py  form_data_agent.py  manifest_agent.py  object_admin_agent.py  pm_agent_simple.py  pm_graph.py  simple_pm.py
agents/: 2ba93536_7bad_48e4_ab2c_130194dc8889.py  7bbcd77c_4595_4f21_962e_319c3c7f5d5f.py  94812c61_9d18_4396_99d8_c2de0b5da265.py  __init__.py  agent_loader.py  agent_registry.py  agents.manifest.yaml  dev-cohenrence_agent.yaml  dev_coherence_agent.yaml  dev_context_agent.yaml  dev_exception_agent.yaml  dev_governance_agent.yaml  dev_io_agent.yaml  dev_observability_agent.yaml  dev_supervisor_agent.yaml  fe76b058_81fc_429a_b514_9a4f40a0ef23.py  file_watcher.py  health_monitor.py  io_agent.py  marshal_agent.py  observability-agent.yaml  observability_agent_graph.py  pm-agent.agent.yaml  state.py  storage_agent.py  storage_agent.yaml  supervisor_agent.py  yaml_validator.py
app/: globals.css  layout.tsx  page.tsx  providers.tsx
archive/: .gitignore  Dockerfile  PROJECT_SUMMARY.md  SESSION_HANDOFF.md  docker-compose.yml  requirements.txt  start.sh
backend/: Dockerfile  __init__.py  audit_service.py  context.py  db.py  db_postgres.py  events.py  io_agent_worker.py  io_deep_agent_llm.py  livekit_service.py  main.py  mongodb_client.py  openfga_client.py  rbac_models.py  rbac_service.py  seed_rbac_postgres.py  startup.sh  voice_agent_worker.py  voice_agent_worker_elevenlabs.py  websocket_manager.py
compiler/: Dockerfile  __init__.py  dis_compiler.py  main.py
deploy/: DEPLOYMENT_EC2_LEGACY.md  deploy.sh  fetch_env_from_ssm.sh
docs/: ADMIN_UI_REQUIREMENTS.md  AGENT_ARCHITECTURE.md  AGENT_COMPLETION_REPORT.md  APP_ROUTE_MIGRATION.md  ARCHITECTURE.md  AWS_DEPLOYMENT_ECS.md  BACKLOG_DEBUGGING_GUIDE.md  CODE_INVENTORY.md  CONSOLIDATION_PLAN.md  DATABASE_IMPORT_EXPORT_GUIDE.md  DEPENDENCY_DIAGRAM.md  DEPLOYMENT.md  DEVELOPER_QUICK_START.md  DOCKER_DEV_WORKFLOW.md  DOCUMENTATION_UPDATE_COMPLETE.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOSSIER_RBAC_REFERENCE.md  DOSSIER_SYSTEM_DESIGN.md  ELEVENLABS_INTEGRATION.md  EVENT_BROADCASTING_SYSTEM.md  Environment C.md  FORGE_AI_USER_GUIDE.md  FORGE_LANGGRAPH_GAP_ANALYSIS.md  FORGE_VS_SYSTEM_AGENTS_ARCHITECTURE.md  FOUNDARY_INSTANCE_ARCHITECTURE.md  FRONTEND_DEVELOPMENT_PLAN.md  FRONTEND_ENHANCEMENT_PLAN.md  FULLY_AGENTIC_FOUNDRY_ROADMAP.md  HEADER_ARCHITECTURE.md  HEADER_REDESIGN_COMPLETE.md  LANGCHAIN_1.0_MIGRATION.md  LANGGRAPH_AGENTS_OVERVIEW.md  LIVEKIT_API_FIX.md  LIVEKIT_CHECKPOINT_UPDATE.md  LIVEKIT_DOCKER_MIGRATION.md  LIVEKIT_FIX.md  LIVEKIT_FIX_SUMMARY.md  LIVEKIT_INSTALL.md  LIVEKIT_QUICK_REFERENCE.md  LIVEKIT_TESTING.md  (+36 more)
forge_service/: Dockerfile  main.py
frontend/: Dockerfile
infra/: REFACTOR_SUMMARY.md  alb.tf  ecr.tf  (+9 more)
(+702 files in other folders)
