# Agent Foundry - Python Project Configuration
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "agent-foundry"
version = "0.8.1"
description = "Enterprise AI Agent Development Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Agent Foundry Team" }
]

[tool.ruff]
# Target Python 3.11+
target-version = "py311"

# Line length to match common standards
line-length = 120

# Include all Python directories
include = [
    "backend/**/*.py",
    "agent/**/*.py",
    "agents/**/*.py",
    "mcp/**/*.py",
    "scripts/**/*.py",
    "tests/**/*.py",
]

# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    "node_modules",
    ".next",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",     # Line too long (handled by formatter)
    "B008",     # Do not perform function calls in argument defaults (FastAPI Depends)
    "B904",     # Within an except clause, raise exceptions with `raise ... from err`
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "ARG001",   # Unused function argument (common in callbacks/handlers)
    "ARG002",   # Unused method argument
    "ERA001",   # Found commented-out code (too aggressive)
    "PLW0603",  # Using the global statement (needed for singletons)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Tests can use assert and have unused imports for fixtures
"tests/**/*.py" = ["S101", "ARG", "PLR2004"]
# Scripts can have prints
"scripts/**/*.py" = ["T201"]
# Init files can have unused imports
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["backend", "agent", "agents", "mcp"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Auto-detect line endings
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Too strict for existing codebase
check_untyped_defs = true
ignore_missing_imports = true
